# atom-dft-mcsh

./: .gitignore  ChangeLog  README.md  generate_validation_figures.py  pyproject.toml
atom/: __init__.py  solver.py
atom/data/: README.md  __init__.py  data_generation.py  data_loading.py  data_manager.py  data_processing.py  data_visualization.py
atom/descriptors/: __init__.py  base.py  basis.py  calculator.py  density.py  grid3d.py  kernels.py  mcsh.py  multipole.py
atom/mesh/: builder.py  operators.py
atom/pseudo/: local.py  non_local.py  read_pseudopotential.py
atom/scf/: __init__.py  convergence.py  density.py  driver.py  eigensolver.py  energy.py  hamiltonian.py  mixer.py  poisson.py  response.py
atom/ui/: __init__.py  notebook_dashboard.py
atom/utils/: occupation_states.py  periodic.py
atom/xc/: __init__.py  evaluator.py  functional_requirements.py  gga_pbe.py  hf.py  lda.py  meta_scan.py  oep.py  rpa.py  rpa_notes.md
atom/xc/jax_demo/: AUTODIFF_READY.md  GRADIENTS_EXPLAINED.md  JAX_COMPATIBILITY_NOTES.md  JAX_MIGRATION_GUIDE.md  evaluator_jax_compatible.py  jax_grad_simple_demo.py  jax_gradient_demo.py
atom/xc/ml_xc/: README.md  __init__.py  base.py  calculator.py  nn_models.py  torch_backend.py
docs/: README.md  _config.yml  _toc.yml  build.sh  cookbook.md  installation.md  intro.md  requirements-binder.txt
docs/_build/.doctrees/: README.doctree  cookbook.doctree  environment.pickle  intro.doctree
docs/_build/.doctrees/api/: reference.doctree
docs/_build/.doctrees/tutorials/: 01_basic_solver.doctree  02_data_loading.doctree
docs/_build/html/: .buildinfo  README.html  cookbook.html  genindex.html  intro.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: cookbook.md
docs/_build/html/_sources/api/: reference.md
docs/_build/html/_sources/tutorials/: 01_basic_solver.md  (+1 more)
docs/_build/html/api/: reference.html
docs/_build/html/tutorials/: 01_basic_solver.html  02_data_loading.html
docs/api/: reference.md
docs/examples/: 03_train_ml_potential.ipynb
docs/tutorials/: 01_basic_solver.md  02_data_loading.md  03_generalized_multipole_api.md
notebooks/: atom_dft_dashboard.ipynb
psps/: Rename.m
scripts/: generate_mcsh_validation_figures.py
tests/: __init__.py  mesh_builder_testcase.py  solver_basic_testcase.py  solver_intermediate_testcase.py  solver_uranium_lda_testcase.py  test_descriptor_solver_generic_contract.py  test_hamiltonian_symmetrization.py  test_mcsh_descriptors.py  test_mcsh_e2e_hydrogen.py  test_mcsh_multi_atom_validation.py  test_mcsh_solver_integration.py  test_mcsh_solver_wiring.py  test_meta_scan_polynomial_continuations.py  test_metagga_hamiltonian_cache.py  test_multipole_master_parity.py  test_notebook_dashboard.py  test_scf_result_serialization.py  test_solver_end_to_end_regression.py
tests/data/master_parity/: mcsh_validation_summary.json  solver_h_o_mcsh_refs.npz  synthetic_hydrogen_mcsh_refs.npz
