[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atom-dft"
version = "0.1.0"
description = "Atomic Density Functional Theory solver using finite element method"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Qihao Cheng", email = "qcheng61@gatech.edu"},
    {name = "Shubhang Trivedi", email = "strivedi44@gatech.edu"},
    {name = "Phanish Suryanarayana", email = "phanish.suryanarayana@ce.gatech.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies - required for basic functionality
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
# Development dependencies - for testing and development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "nbconvert>=6.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

# Machine learning dependencies - for ML XC functionals
ml = [
    "torch>=1.9.0",
    "scikit-learn>=0.24.0",
]

# Visualization dependencies - for plotting and visualization
viz = [
    "matplotlib>=3.3.0",
]

# Thread pool control - for parallel RPA calculations
threadpool = [
    "threadpoolctl>=2.0.0",
]

# Documentation dependencies - for building Jupyter Book
docs = [
    "jupyter-book>=0.15.0",
    "sphinx-book-theme>=1.0.0",
    "myst-nb>=0.17.0",
    "sphinx>=5.0.0",
    "sphinx-design>=0.4.0",
    "sphinx-copybutton>=0.5.0",
    "matplotlib>=3.3.0",
]

# All optional dependencies combined
all = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "nbconvert>=6.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "torch>=1.9.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "threadpoolctl>=2.0.0",
    "jupyter-book>=0.15.0",
    "sphinx-book-theme>=1.0.0",
    "myst-nb>=0.17.0",
    "sphinx>=5.0.0",
    "sphinx-design>=0.4.0",
    "sphinx-copybutton>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/tjdonley/atom-dft-mcsh"
Documentation = "https://github.com/tjdonley/atom-dft-mcsh#readme"
Repository = "https://github.com/tjdonley/atom-dft-mcsh"
Issues = "https://github.com/tjdonley/atom-dft-mcsh/issues"

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["atom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
